package dtt.formacao.java.consultas.utils;

public enum Specialty {
    GENERAL_MEDICINE,
    CARDIOLOGY,
    DERMATOLOGY,
    ENDOCRINOLOGY,
    GASTROENTEROLOGY,
    GYNECOLOGY,
    HEMATOLOGY,
    NEPHROLOGY,
    NEUROLOGY,
    ONCOLOGY,
    OPHTHALMOLOGY,
    ORTHOPEDICS,
    OTORHINOLARYNGOLOGY,
    PEDIATRICS,
    PSYCHIATRY,
    PULMONOLOGY,
    RADIOLOGY,
    RHEUMATOLOGY,
    UROLOGY,
    SURGERY
}
