classDiagram

people <|-- doctor
people <|-- patient

class people {
  <<abstract>>
  + id: id
  + name: String
  + phoneNumber: String
  + birthDate: Date
  + createdAt: Date
  + updatedAt: Date
  + docNumber: String
  + fiscalNumber: int
  + socialSecurityNumber: int
}

class doctor {
}

class patient {
  + insuranceNumber: String
}


class appointment {
  + id: id
  + startDate: DateTime
  + endDate: DateTime
  + createdAt: DateTime
  + updatedAt: DateTime 
  + type: String
}

class specialty {
    <<enumeration>>
    Neurology
    Cardiology
    ...
}

 class documenttype {
    <<enumeration>>         
    Passport         
    Citizen ID            
  }

   class gender {
    <<enumeration>>         
    Male
    Female
    Other       
  }


doctor "*" -- "*" specialty 
appointment "*" -- "1" specialty


appointment "*" -- "1" doctor
appointment "*" -- "1" patient

people --> documenttype
people --> gender